[gd_scene load_steps=31 format=3 uid="uid://dkfi11o6yoyvt"]

[ext_resource type="Script" path="res://assets/game_manager/scripts/mini_game_manager.gd" id="1_r0ho1"]
[ext_resource type="Texture2D" uid="uid://b4xw4ybhjdfs2" path="res://assets/game_manager/bubs_yeah_no_transitions/BubNO0001.png" id="2_qcany"]
[ext_resource type="Animation" uid="uid://dlylawv2xg63i" path="res://assets/game_manager/animations/intro_manager.res" id="2_s3k0j"]
[ext_resource type="Texture2D" uid="uid://dc7g2rpoihs2q" path="res://assets/game_manager/bubs_yeah_no_transitions/BubNO0002.png" id="3_8uaqb"]
[ext_resource type="Animation" uid="uid://c60mvn7pt2t66" path="res://assets/game_manager/animations/transition_mini_game.res" id="3_maxh3"]
[ext_resource type="Texture2D" uid="uid://bddw251wrh3mw" path="res://assets/game_manager/blank.png" id="4_ayn3l"]
[ext_resource type="Texture2D" uid="uid://dc8bi564068j0" path="res://assets/game_manager/bubs_yeah_no_transitions/BubNO0003.png" id="4_k4cif"]
[ext_resource type="FontFile" uid="uid://blbfoi2bjrbw1" path="res://assets/fonts/SuperFrog-Yqy1q.ttf" id="5_jmnhc"]
[ext_resource type="Texture2D" uid="uid://gu8ijcp2qalm" path="res://assets/game_manager/bubs_yeah_no_transitions/BubNO0004.png" id="5_rcblu"]
[ext_resource type="Texture2D" uid="uid://dq0e0vbe5alef" path="res://assets/game_manager/bubs_yeah_no_transitions/BubNO0005.png" id="6_vmt14"]
[ext_resource type="Texture2D" uid="uid://e0btsw8dp2aw" path="res://assets/game_manager/bubs_yeah_no_transitions/BubNO0006.png" id="7_vnr20"]
[ext_resource type="Texture2D" uid="uid://c2g2cpq3obpis" path="res://assets/game_manager/bubs_yeah_no_transitions/BubNO0007.png" id="8_5lde0"]
[ext_resource type="Texture2D" uid="uid://jfehorwhsr1l" path="res://assets/game_manager/bubs_yeah_no_transitions/BubYEAH0001.png" id="9_2v4tq"]
[ext_resource type="Texture2D" uid="uid://d0cu3ieql30r0" path="res://assets/game_manager/bubs_yeah_no_transitions/BubYEAH0002.png" id="10_8ovg2"]
[ext_resource type="Texture2D" uid="uid://biff68gpw2o75" path="res://assets/game_manager/bubs_yeah_no_transitions/BubYEAH0003.png" id="11_xy5k0"]
[ext_resource type="Texture2D" uid="uid://oybesirxur43" path="res://assets/game_manager/bubs_yeah_no_transitions/BubYEAH0004.png" id="12_skiyt"]
[ext_resource type="Texture2D" uid="uid://ct4kcoeh2uros" path="res://assets/game_manager/bubs_yeah_no_transitions/BubYEAH0005.png" id="13_4jnqg"]
[ext_resource type="Texture2D" uid="uid://caaou0wdfhsqg" path="res://assets/game_manager/bubs_yeah_no_transitions/BubYEAH0006.png" id="14_l6ed7"]
[ext_resource type="Texture2D" uid="uid://87mql3gjm5b2" path="res://assets/game_manager/bubs_yeah_no_transitions/BubYEAH0007.png" id="15_vgg8q"]
[ext_resource type="Texture2D" uid="uid://cf8wru0vl54l6" path="res://assets/game_manager/bubs_yeah_no_transitions/BubYEAH0008.png" id="16_5hv5f"]
[ext_resource type="Texture2D" uid="uid://b6ekvqqnfabf3" path="res://assets/game_manager/bubs_yeah_no_transitions/BubYEAH0009.png" id="17_n5l0v"]
[ext_resource type="Texture2D" uid="uid://u2cufodo4a5m" path="res://assets/game_manager/bubs_yeah_no_transitions/BubYEAH0010.png" id="18_lv2kq"]
[ext_resource type="Texture2D" uid="uid://dbbf1spmmuc6k" path="res://assets/game_manager/bubs_yeah_no_transitions/BubYEAH0011.png" id="19_w8oat"]
[ext_resource type="Texture2D" uid="uid://bwo23tynkk5dg" path="res://assets/ball_cup_minigame/ball.png" id="23_7cpmk"]

[sub_resource type="SpriteFrames" id="SpriteFrames_uxhkx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_qcany")
}, {
"duration": 1.0,
"texture": ExtResource("3_8uaqb")
}, {
"duration": 1.0,
"texture": ExtResource("2_qcany")
}, {
"duration": 1.0,
"texture": ExtResource("3_8uaqb")
}, {
"duration": 1.0,
"texture": ExtResource("2_qcany")
}, {
"duration": 1.0,
"texture": ExtResource("3_8uaqb")
}, {
"duration": 1.0,
"texture": ExtResource("2_qcany")
}, {
"duration": 1.0,
"texture": ExtResource("3_8uaqb")
}, {
"duration": 1.0,
"texture": ExtResource("2_qcany")
}, {
"duration": 1.0,
"texture": ExtResource("3_8uaqb")
}, {
"duration": 1.0,
"texture": ExtResource("2_qcany")
}, {
"duration": 1.0,
"texture": ExtResource("3_8uaqb")
}, {
"duration": 1.0,
"texture": ExtResource("4_k4cif")
}, {
"duration": 1.0,
"texture": ExtResource("5_rcblu")
}, {
"duration": 1.0,
"texture": ExtResource("6_vmt14")
}, {
"duration": 1.0,
"texture": ExtResource("7_vnr20")
}, {
"duration": 1.0,
"texture": ExtResource("8_5lde0")
}, {
"duration": 1.0,
"texture": ExtResource("6_vmt14")
}, {
"duration": 1.0,
"texture": ExtResource("7_vnr20")
}, {
"duration": 1.0,
"texture": ExtResource("8_5lde0")
}, {
"duration": 1.0,
"texture": ExtResource("6_vmt14")
}, {
"duration": 1.0,
"texture": ExtResource("7_vnr20")
}, {
"duration": 1.0,
"texture": ExtResource("8_5lde0")
}, {
"duration": 1.0,
"texture": ExtResource("6_vmt14")
}, {
"duration": 1.0,
"texture": ExtResource("7_vnr20")
}, {
"duration": 1.0,
"texture": ExtResource("8_5lde0")
}, {
"duration": 1.0,
"texture": ExtResource("6_vmt14")
}, {
"duration": 1.0,
"texture": ExtResource("7_vnr20")
}, {
"duration": 1.0,
"texture": ExtResource("8_5lde0")
}, {
"duration": 1.0,
"texture": ExtResource("6_vmt14")
}, {
"duration": 1.0,
"texture": ExtResource("7_vnr20")
}, {
"duration": 1.0,
"texture": ExtResource("8_5lde0")
}, {
"duration": 1.0,
"texture": ExtResource("6_vmt14")
}, {
"duration": 1.0,
"texture": ExtResource("7_vnr20")
}, {
"duration": 1.0,
"texture": ExtResource("8_5lde0")
}, {
"duration": 1.0,
"texture": ExtResource("6_vmt14")
}],
"loop": false,
"name": &"bubs_no",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_8ovg2")
}, {
"duration": 1.0,
"texture": ExtResource("9_2v4tq")
}, {
"duration": 1.0,
"texture": ExtResource("10_8ovg2")
}, {
"duration": 1.0,
"texture": ExtResource("11_xy5k0")
}, {
"duration": 1.0,
"texture": ExtResource("12_skiyt")
}, {
"duration": 1.0,
"texture": ExtResource("13_4jnqg")
}, {
"duration": 1.0,
"texture": ExtResource("14_l6ed7")
}, {
"duration": 1.0,
"texture": ExtResource("15_vgg8q")
}, {
"duration": 1.0,
"texture": ExtResource("16_5hv5f")
}, {
"duration": 1.0,
"texture": ExtResource("17_n5l0v")
}, {
"duration": 1.0,
"texture": ExtResource("18_lv2kq")
}, {
"duration": 1.0,
"texture": ExtResource("19_w8oat")
}, {
"duration": 1.0,
"texture": ExtResource("16_5hv5f")
}, {
"duration": 1.0,
"texture": ExtResource("17_n5l0v")
}, {
"duration": 1.0,
"texture": ExtResource("18_lv2kq")
}, {
"duration": 1.0,
"texture": ExtResource("19_w8oat")
}, {
"duration": 1.0,
"texture": ExtResource("16_5hv5f")
}, {
"duration": 1.0,
"texture": ExtResource("17_n5l0v")
}, {
"duration": 1.0,
"texture": ExtResource("18_lv2kq")
}, {
"duration": 1.0,
"texture": ExtResource("19_w8oat")
}, {
"duration": 1.0,
"texture": ExtResource("16_5hv5f")
}, {
"duration": 1.0,
"texture": ExtResource("17_n5l0v")
}, {
"duration": 1.0,
"texture": ExtResource("18_lv2kq")
}, {
"duration": 1.0,
"texture": ExtResource("19_w8oat")
}, {
"duration": 1.0,
"texture": ExtResource("16_5hv5f")
}, {
"duration": 1.0,
"texture": ExtResource("17_n5l0v")
}, {
"duration": 1.0,
"texture": ExtResource("18_lv2kq")
}, {
"duration": 1.0,
"texture": ExtResource("19_w8oat")
}, {
"duration": 1.0,
"texture": ExtResource("16_5hv5f")
}, {
"duration": 1.0,
"texture": ExtResource("17_n5l0v")
}, {
"duration": 1.0,
"texture": ExtResource("18_lv2kq")
}, {
"duration": 1.0,
"texture": ExtResource("19_w8oat")
}, {
"duration": 1.0,
"texture": ExtResource("16_5hv5f")
}, {
"duration": 1.0,
"texture": ExtResource("17_n5l0v")
}, {
"duration": 1.0,
"texture": ExtResource("18_lv2kq")
}, {
"duration": 1.0,
"texture": ExtResource("19_w8oat")
}],
"loop": false,
"name": &"bubs_yeah",
"speed": 24.0
}]

[sub_resource type="Animation" id="Animation_1icvy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/TransitionLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1172, 192)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/IntroLabel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(144, 169)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MiniGameOverlay/InstructionBanner:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TransitionAnimatedSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_oajnb"]
resource_name = "bubs_yeah"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionAnimatedSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_mtku8"]
resource_name = "show_end_banner"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MiniGameOverlay/InstructionBanner:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_iqiqk"]
resource_name = "show_instruction_banner"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MiniGameOverlay/InstructionBanner:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p322v"]
_data = {
"RESET": SubResource("Animation_1icvy"),
"bubs_yeah": SubResource("Animation_oajnb"),
"intro_manager": ExtResource("2_s3k0j"),
"show_end_banner": SubResource("Animation_mtku8"),
"show_instruction_banner": SubResource("Animation_iqiqk"),
"transition_mini_game": ExtResource("3_maxh3")
}

[node name="MiniGameManager" type="Node2D"]
position = Vector2(-1, 0)
script = ExtResource("1_r0ho1")

[node name="TransitionAnimatedSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(500, 500)
sprite_frames = SubResource("SpriteFrames_uxhkx")
animation = &"bubs_no"
frame = 35
frame_progress = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p322v")
}
autoplay = "intro_manager"

[node name="IntroLabel" type="Label" parent="AnimationPlayer"]
offset_left = 144.0
offset_top = 169.0
offset_right = 1016.0
offset_bottom = 306.0
theme_override_font_sizes/font_size = 100
text = "Cool Introduction!"

[node name="TransitionLabel" type="Label" parent="AnimationPlayer"]
offset_left = 1172.0
offset_top = 192.0
offset_right = 1535.0
offset_bottom = 259.0
theme_override_font_sizes/font_size = 48
text = "Cool Transition!"

[node name="MiniGameTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="MiniGameOverlay" type="CanvasLayer" parent="."]

[node name="Credits" type="Label" parent="MiniGameOverlay"]
offset_left = 15.0
offset_top = 10.0
offset_right = 356.0
offset_bottom = 99.0
text = "Credits!"

[node name="Lives" type="Label" parent="MiniGameOverlay"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -155.0
offset_top = 13.0
offset_right = -22.0
offset_bottom = 67.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.921569, 0.784314, 0.309804, 1)
theme_override_colors/font_shadow_color = Color(0.0352941, 0.482353, 0.792157, 1)
theme_override_colors/font_outline_color = Color(0.588235, 0.709804, 0.792157, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 11
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/font = ExtResource("5_jmnhc")
theme_override_font_sizes/font_size = 50
text = "LIVES"
horizontal_alignment = 2

[node name="TextureRect" type="TextureRect" parent="MiniGameOverlay/Lives"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="MiniGameOverlay/Lives"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_top = 68.865
offset_bottom = 108.865
grow_horizontal = 0
alignment = 2

[node name="TextureRect" type="TextureRect" parent="MiniGameOverlay/Lives/HBoxContainer"]
layout_mode = 2
texture = ExtResource("23_7cpmk")

[node name="InstructionBanner" type="Control" parent="MiniGameOverlay"]
layout_mode = 3
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="MiniGameOverlay/InstructionBanner"]
modulate = Color(0.0316, 0.474, 0.79, 0.423529)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
texture = ExtResource("4_ayn3l")

[node name="InstructionLabel" type="Label" parent="MiniGameOverlay/InstructionBanner"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -41.5
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.921569, 0.784314, 0.309804, 1)
theme_override_colors/font_shadow_color = Color(0.0352941, 0.482353, 0.792157, 1)
theme_override_colors/font_outline_color = Color(0.588235, 0.709804, 0.792157, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 11
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/font = ExtResource("5_jmnhc")
theme_override_font_sizes/font_size = 72
text = "WINNER!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerLabel" type="Label" parent="MiniGameOverlay"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -21.5
offset_top = -23.0
offset_right = 21.5
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 64
text = "TIME: 5"

[node name="Audio_MiniGameResult" type="AudioStreamPlayer" parent="."]

[node name="Audio_MiniGameMusic" type="AudioStreamPlayer" parent="."]

[node name="Audio_Bubbleware" type="AudioStreamPlayer" parent="."]

[node name="Audio_Transition" type="AudioStreamPlayer" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_finished"]
[connection signal="timeout" from="MiniGameTimer" to="." method="_on_mini_game_timer_timeout"]
